@@ -1,5 +1,10 @@
 2005-09-16  Joerg Wunsch <j@uriah.heep.sax.de>
 
+	* usb_libusb.c (usbdev_drain): actually implement draining to aid
+	synchronizing against a JTAG ICE in weird state.
+
+2005-09-16  Joerg Wunsch <j@uriah.heep.sax.de>
+
 	* butterfly.c: improve the butterfly initialization so it is more likely
 	to synchonize; [bug #9787: avrdude 4.4.0 correct butterfly interface]
 
